--- a/Sentiment/models/decisionTree.ipynb
+++ b/Sentiment/models/decisionTree.ipynb
@@ -146,6 +146,12 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
