added claim detection code

--- a/Sentiment/pipeline/Sentiment_Analysis_TF_IDF_With_SHAP.ipynb
+++ b/Sentiment/pipeline/Sentiment_Analysis_TF_IDF_With_SHAP.ipynb
@@ -290,56 +290,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.4 load all prediciton in one dataframe\n",
-    "so we can see which sample is most interesting "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Sentiment.disagreements import get_disagreements\n",
-    "\n",
-    "dtc_bert_sorted_by_diff,logreg_bert_sorted_by_diff,logreg_dtc_sorted_by_diff = get_disagreements(y_test,BERT_PREDICTION_FILE, LOGREG_PREDICTION_FILE, DTC_PREDICTION_FILE)\n",
-    "\n",
-    "# Wähle die Top-N interessanten Samples\n",
-    "top_n = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dtc_bert_sorted_by_diff.head(top_n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logreg_bert_sorted_by_diff.head(top_n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logreg_dtc_sorted_by_diff.head(top_n)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 4 Analyze With SHAP\n",
     "\n",
     "We know that the Logistic Regression Performs better than the Decision Tree Classifier.\n",
@@ -1034,6 +984,17 @@
    "metadata": {},
    "source": [
     "# 7 Model Comparision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Sentiment.disagreements import get_disagreements\n",
+    "\n",
+    "dtc_bert_sorted_by_diff,logreg_bert_sorted_by_diff,logreg_dtc_sorted_by_diff = get_disagreements(y_test,BERT_PREDICTION_FILE, LOGREG_PREDICTION_FILE, DTC_PREDICTION_FILE)"
    ]
   },
   {
